Fixed DrawDoc top bar not properly wrapping

--- a/src/Apps/DrawDoc/style.css
+++ b/src/Apps/DrawDoc/style.css
@@ -13,7 +13,6 @@ button>label {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  height: 100%;
   padding-left: 2px;
   padding-right: 2px;
 }
